--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <title>ACTIVIDAD 3</title>
   </head>
   <body>
-    <header></header>
+    <header>
+        <div class=" navbar container-fluid">
+          <a class="navbar-brand" href="#"> ACTIVIDAD NUMERO 3 - JAVASCRIPT </a>
+        </div>
+    </header>
     <main class="container mt-4">
       <h3>Ejercicio 1</h3>
       <div id="ejercicio1"></div>
